debugged website not loading images on live site due to file naming error.

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -98,7 +98,7 @@ li {
 
     /* ----- Home Section of Page ----- */
     #home_section {
-        background-image: url("media/Taylor_Leaning_with_Cello.jpg");
+        background-image: url("Media/Taylor_Leaning_with_Cello.jpg");
         background-color: rgb(175, 175, 175);
         background-blend-mode: multiply;
         background-position: top left;
@@ -175,7 +175,7 @@ li {
 
     /* ----- Contact Section of Page ----- */
     #contact_section {
-        background-image: url(media/Cello_Laying_Down.jpg);
+        background-image: url("Media/Cello_Laying_Down.jpg");
         background-color: rgb(80, 80, 80);
         background-blend-mode: overlay;
         background-position: center bottom;
@@ -276,7 +276,7 @@ li {
 
     /* ----- Home Section of Page ----- */
     #home_section {
-        background-image: url("media/Taylor_Leaning_with_Cello.jpg");
+        background-image: url("Media/Taylor_Leaning_with_Cello.jpg");
         background-color: rgb(175, 175, 175);
         background-blend-mode: multiply;
         background-position: top left;
@@ -353,7 +353,7 @@ li {
 
     /* ----- Contact Section of Page ----- */
     #contact_section {
-        background-image: url(media/Cello_Laying_Down.jpg);
+        background-image: url("Media/Cello_Laying_Down.jpg");
         background-color: rgb(80, 80, 80);
         background-blend-mode: overlay;
         background-position: center bottom;
@@ -454,7 +454,7 @@ li {
 
     /* ----- Home Section of Page ----- */
     #home_section {
-        background-image: url("media/Taylor_Leaning_with_Cello.jpg");
+        background-image: url("Media/Taylor_Leaning_with_Cello.jpg");
         background-color: rgb(175, 175, 175);
         background-blend-mode: multiply;
         background-position: top left;
@@ -531,7 +531,7 @@ li {
 
     /* ----- Contact Section of Page ----- */
     #contact_section {
-        background-image: url(media/Cello_Laying_Down.jpg);
+        background-image: url("Media/Cello_Laying_Down.jpg");
         background-color: rgb(80, 80, 80);
         background-blend-mode: overlay;
         background-position: center bottom;
@@ -632,7 +632,7 @@ li {
 
     /* ----- Home Section of Page ----- */
     #home_section {
-        background-image: url("media/Taylor_Leaning_with_Cello.jpg");
+        background-image: url("Media/Taylor_Leaning_with_Cello.jpg");
         background-color: rgb(175, 175, 175);
         background-blend-mode: multiply;
         background-position: top left;
@@ -709,7 +709,7 @@ li {
 
     /* ----- Contact Section of Page ----- */
     #contact_section {
-        background-image: url(media/Cello_Laying_Down.jpg);
+        background-image: url("Media/Cello_Laying_Down.jpg");
         background-color: rgb(80, 80, 80);
         background-blend-mode: overlay;
         background-position: bottom center;
@@ -810,7 +810,7 @@ li {
 
     /* ----- Home Section of Page ----- */
     #home_section {
-        background-image: url("media/Taylor_Leaning_with_Cello.jpg");
+        background-image: url("Media/Taylor_Leaning_with_Cello.jpg");
         background-color: rgb(175, 175, 175);
         background-blend-mode: multiply;
         background-position: top left;
@@ -887,7 +887,7 @@ li {
 
     /* ----- Contact Section of Page ----- */
     #contact_section {
-        background-image: url(media/Cello_Laying_Down.jpg);
+        background-image: url("Media/Cello_Laying_Down.jpg");
         background-color: rgb(80, 80, 80);
         background-blend-mode: overlay;
         background-position: bottom center;
@@ -1064,7 +1064,7 @@ li {
 
     /* ----- Contact Section of Page ----- */
     #contact_section {
-        background-image: url(media/Cello_Laying_Down.jpg);
+        background-image: url("Media/Cello_Laying_Down.jpg");
         background-color: rgb(80, 80, 80);
         background-blend-mode: overlay;
         background-position: bottom center;
@@ -1165,7 +1165,7 @@ li {
 
     /* ----- Home Section of Page ----- */
     #home_section {
-        background-image: url("media/Taylor_Leaning_with_Cello.jpg");
+        background-image: url("Media/Taylor_Leaning_with_Cello.jpg");
         background-color: rgb(175, 175, 175);
         background-blend-mode: multiply;
         background-position: top left;
@@ -1241,7 +1241,7 @@ li {
 
     /* ----- Contact Section of Page ----- */
     #contact_section {
-        background-image: url(media/Cello_Laying_Down.jpg);
+        background-image: url("Media/Cello_Laying_Down.jpg");
         background-color: rgb(80, 80, 80);
         background-blend-mode: overlay;
         background-position: center;
